--- a/dev/styles/layout/_global.scss
+++ b/dev/styles/layout/_global.scss
@@ -1,3 +1,41 @@
 html{
     scroll-behavior: smooth;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.clip-inset{  
+  
+    clip-path: inset(209px 242px 193px 11px);
+    /* les valeurs sont dans le sens de l'éguie d'une montre */
+} 
+
+.clip-circle{
+    clip-path: circle(40%);
+}
+
+.clip-ellipse{
+    clip-path: ellipse(300px 300px at 25% 15%)
+}
+
+.clip-polygon{
+    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+}
+
+
+
+
+.wrapper{
+    padding: 100px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    img{
+        width: 500px;
+        height: 500px;
+        object-fit: cover;
+        margin: 50px;
+    }
+
 }
